added background image

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://thumbs.dreamstime.com/z/seamless-pattern-question-mark-hand-painted-watercolor-illustration-isolated-white-black-white-template-seamless-160859738.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>THE QUIZ</title>
   </head>
   <body>
     <div id="root"></div>
