--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://thumbs.dreamstime.com/z/seamless-pattern-question-mark-hand-painted-watercolor-illustration-isolated-white-black-white-template-seamless-160859738.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://th.bing.com/th?id=OIP.KvQi9dn6W41E2Pi036uSawHaHU&w=251&h=248&c=8&rs=1&qlt=90&o=6&cb=13&dpr=1.4&pid=3.1&rm=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THE QUIZ</title>
   </head>
